<resources>
    <string name="app_name">Kalculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="fourth">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="divide">&#247;</string>
    <string name="radic">&#8730;</string>
    <string name="multiply">&#215;</string>
    <string name="minus">&#8722;</string>
    <string name="plus">+</string>
    <string name="percent">%</string>
    <string name="c">C</string>
    <string name="mr">MR</string>
    <string name="mc">MC</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="dot">&#8901;</string>
    <string name="calc">=</string>
</resources>